cada classe agora pode ser feita de acordo com a idade do usuario

--- a/Desbravadores-site/public/classes/pesquisador.html
+++ b/Desbravadores-site/public/classes/pesquisador.html
@@ -26,120 +26,128 @@
     </ul>
 <div class="conteiner">
     
-    <h2>
-        I. GERAIS
-    </h2>
-    <p>
-1. Ter, no mínimo, 10 anos de idade.<br>
-
-2. Ser membro ativo do Clube de Desbravadores.<br>
-
-3. Memorizar e explicar o Voto e a Lei do Desbravador.<br>
-
-4. Ler o livro do Curso de Leitura do ano.<br>
-
-
-5. Ler o livro Vaso de Barro.<br>
-
-6. Participar ativamente da Classe Bíblica do seu Clube.<br>
+<h2>
+    I. GERAIS
+</h2>
+<p>
+1. Ter, no mínimo, 12 anos de idade.<input type="checkbox"><br>
+2. Ser membro ativo do Clube de Desbravadores.<input type="checkbox"><br>
+3. Demonstrar sua compreensão do significado da Lei do Desbravador através de uma das seguintes atividades:<input type="checkbox"><br>
+a) Representação<input type="checkbox"><br>
+b) Debate<input type="checkbox"><br>
+c) Redação<input type="checkbox"><br>
+4. Ler o livro do Curso de Leitura do ano e escrever dois parágrafos sobre o que mais lhe chamou atenção ou considerou importante.<input type="checkbox"><br>
+5. Ler o livro Além da magia.<input type="checkbox"><br>
+6. Participar ativamente da Classe Bíblica do seu Clube.<input type="checkbox"><br>
 </p>
 
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
-1. Memorizar e demonstrar o seu conhecimento:<br>
-a) Criação: O que Deus criou em cada dia da Criação.<br>
-b) 10 Pragas: Quais as pragas que caíram sobre o Egito.<br>
-c) 12 Tribos: O nome de cada uma das 12 tribos de Israel.<br>
-d) 39 livros do Antigo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
-
-2. Ler e explicar os versos abaixo:<br>
-a) João 3:16<br>
-b) Efésios 6:1-3<br>
-c) II Timóteo 3:16<br>
-d) Salmo 1<br>
-
-3. Leitura bíblica:<br>
-Gn 1, Gn 2, Gn 3, Gn 4:1-16, Gn 6:11-22, Gn 7, Gn 8, Gn 9:1-19, Gn 11:1-9, Gn 12:1-10, Gn 13, Gn 14:18-24, <br>
-Gn 15, Gn 17:1-8; 15-22, Gn 18:1-15, Gn 18:16-33, Gn 19:1-29, Gn 21:1-21, Gn 22:1-19, Gn 23, Gn 24:1-46, 48, <br>
-Gn 24:52-67, Gn 27, Gn 28, Gn 29, Gn 30:25-31; 31:2-3, 17-18, Gn 32, Gn 33, Gn 37, Gn 39, Gn 40, Gn 41, Gn 42, <br>
-Gn 43, Gn 44, Gn 45, Gn 47, Gn 50, Êx 1, Êx 2, Êx 3, Êx 4:1-17; 27-31, Êx 5, Êx 7, Êx 8, Êx 9, Êx 10, 11, Êx 12, <br>
-Êx 13:17-22; 14, Êx 15:22-27; 16, Êx 17, Êx 18, Êx 19, Êx 20, Êx 24, Êx 32, Êx 33, Êx 34:1-14; 29-35, Êx 35:4-29 e 40. <br>
+1. Memorizar e demonstrar o seu conhecimento:<input type="checkbox"><br>
+a) Levítico 11: regras dos alimentos considerados comestíveis e não comestíveis.<input type="checkbox"><br>
+2. Ler e explicar os versos abaixo:<input type="checkbox"><br>
+a) Eclesiastes 12:13-14<input type="checkbox"><br>
+b) Romanos 6:23<input type="checkbox"><br>
+c) Apocalipse 1:3<input type="checkbox"><br>
+d) Isaías 43:1-2<input type="checkbox"><br>
+e) Salmo 51:10<input type="checkbox"><br>
+f) Salmo 16<input type="checkbox"><br>
+3. Leitura bíblica:<input type="checkbox"><br>
+1 Rs 1:28-53, 3, 4:20-34, 5, 6, 8:12-60, 10, 11:6-43, 12, 16:29-33, 17:1-7, 17:8-24, 18, 19, 21, 2 Rs 2, 4:1-7, 4:8-41, 5, 6:1-23, 6:24-33, 7, 20, 22, 23:36-37, 24, 25:1-7, 2 Cr 24:1-14, 36, Ed 1, 3, 6:14-15, Ne 1, 2, 4, 8, Ester 1, 2, 3, 4, 5, 6, 7, 8, Jó 1, 2, 42, Sl 1, 15, 19, 23, 24, 27, 37, 39, 42, 46, 67, 90, 91, 92, 97, 98, 100, 117, 119:1-176, 121, 125, 150, Pv 1, 3, 4, 10, 15, 20, 25, Ec 1<input type="checkbox"><br>
+4. Conversar com seu líder e escolher uma das seguintes histórias:<input type="checkbox"><br>
+a) João 3 – Nicodemos<input type="checkbox"><br>
+b) João 4 – A mulher samaritana<input type="checkbox"><br>
+c) Lucas 10 – O bom samaritano<input type="checkbox"><br>
+d) Lucas 15 – O filho pródigo<input type="checkbox"><br>
+e) Lucas 19 – Zaqueu<input type="checkbox"><br>
+Através da história escolhida, demonstrar sua compreensão em como Jesus salva as pessoas, usando um dos métodos abaixo:<input type="checkbox"><br>
+a) Conversar em grupo com a participação de seu líder<input type="checkbox"><br>
+b) Apresentar uma mensagem em uma reunião do Clube<input type="checkbox"><br>
+c) Fazer uma série de cartazes ou uma maquete<input type="checkbox"><br>
+d) Escrever uma poesia ou hino<input type="checkbox"><br>
 </p>
+
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
-1. Dedicar duas horas ajudando alguém em sua comunidade, através de duas das seguintes atividades:<br>
-a) Visitar alguém que precisa de amizade e orar com essa pessoa.<br>
-b) Oferecer alimento a alguém carente.<br>
-c) Participar de um projeto ecológico ou educativo.<br>
-
-2. Escrever uma redação explicando como ser um bom cidadão no lar e na escola.<br>
+1. Conhecer os projetos comunitários desenvolvidos em sua cidade e participar de, pelo menos, um deles com sua Unidade ou Clube.<input type="checkbox"><br>
+2. Participar em três atividades missionárias da igreja.<input type="checkbox"><br>
 </p>
+
 <h2>IV. DESENVOLVENDO AMIZADE</h2>
 <p>
-1. Mencionar dez qualidades de um bom amigo e apresentar quatro situações diárias onde você praticou a Regra Áurea de Mateus 7:12.<br>
-
-2. Saber cantar o Hino Nacional de seu país e conhecer sua história. Saber o nome do autor da letra e da música do hino.<br>
+1. Participar de um debate ou representação sobre a pressão de grupo e identificar a influência que isso exerce sobre suas decisões.<input type="checkbox"><br>
+2. Visitar um órgão público de sua cidade ou bairro e descobrir de que maneiras o Clube pode ser útil à sua comunidade.<input type="checkbox"><br>
+</p>
 
 <h2>V. SAÚDE E APTIDÃO FÍSICA</h2>
-
-1. Completar uma das seguintes especialidades:<br>
-a) Natação principiante I<br>
-b) Cultura física<br>
-c) Nós e amarras<br>
-d) Segurança básica na água<br>
-
-2. Utilizando a experiência de Daniel:<br>
-a) Explicar os princípios de temperança que ele defendeu ou participar em uma apresentação ou encenação sobre Daniel 1.<br>
-b) Memorizar e explicar Daniel 1:8.<br>
-c) Escrever seu compromisso pessoal de seguir um estilo de vida saudável.<br>
-
-3. Aprender os princípios de uma dieta saudável e ajudar a preparar um quadro com os grupos básicos de alimentos.<br>
+<p>
+1. Escolher uma das atividades abaixo e escrever um texto pessoal para um estilo de vida livre do álcool:<input type="checkbox"><br>
+a) Participar de uma discussão em classe sobre os efeitos do álcool no organismo.<input type="checkbox"><br>
+b) Assistir a um vídeo sobre o efeito do álcool ou outras drogas no corpo humano e conversar sobre o assunto.<input type="checkbox"><br>
 </p>
+
 <h2>VI. ORGANIZAÇÃO E LIDERANÇA</h2>
 <p>
-1. Através da observação, acompanhar todo o processo de planejamento até a execução de uma caminhada de 5 km.<br>
+1. Dirigir uma cerimônia de abertura da reunião semanal do seu Clube ou um programa da Escola Sabatina.<input type="checkbox"><br>
+2. Ajudar a organizar a Classe Bíblica do seu Clube.<input type="checkbox"><br>
 </p>
-<h2>VII. ESTUDO DA NATUREZA</h2> 
+
+<h2>VII. ESTUDO DA NATUREZA</h2>
 <p>
-1. Completar uma das seguintes especialidades:<br>
-a) Felinos<br>
-b) Cães<br>
-c) Mamíferos<br>
-d) Sementes<br>
-e) Aves de estimação<br>
-
-2. Aprender e demonstrar uma maneira para purificar a água e escrever um parágrafo destacando o significado de Jesus como a água da vida.<br>
-
-3. Aprender e montar uma barraca em local apropriado.<br>
+1. Identificar a estrela Alfa da constelação de Centauro e a constelação de Órion. Conhecer o significado espiritual de Órion, como descrito no livro Primeiros Escritos, pág. 41.<input type="checkbox"><br>
+2. Completar uma das especialidades abaixo:<input type="checkbox"><br>
+a) Astronomia<input type="checkbox"><br>
+b) Cactos<input type="checkbox"><br>
+c) Climatologia<input type="checkbox"><br>
+d) Flores<input type="checkbox"><br>
+e) Rastreio de animais<input type="checkbox"><br>
 </p>
+
 <h2>VIII. ARTE DE ACAMPAR</h2>
 <p>
-1. Demonstrar como cuidar corretamente de uma corda. Fazer e explicar o uso prático dos seguintes nós:<br>
-a) Simples<br>
-b) Cego<br>
-c) Direito<br>
-d) Cirurgião<br>
-e) Laís de guia<br>
-f) Laís de guia duplo<br>
-g) Escota<br>
-h) Catau<br>
-i) Pescador<br>
-j) Fateixa<br>
-k) Volta do fiel<br>
-l) Nó de gancho<br>
-m) Volta da ribeira<br>
-n) Ordinário<br>
-
-2. Completar a especialidade de Acampamento I.<br>
-
-3. Apresentar dez regras para uma caminhada e explicar o que fazer quando estiver perdido.<br>
-
-4. Aprender os sinais para seguir uma pista. Preparar e seguir uma pista de no mínimo 10 sinais, que também possa ser seguida por outros.<br>
+1. Apresentar seis segredos para um bom acampamento. Participar de um acampamento de final de semana, planejando e cozinhando duas refeições.<input type="checkbox"><br>
+2. Completar uma das seguintes especialidades:<input type="checkbox"><br>
+a) Acampamento III<input type="checkbox"><br>
+b) Primeiros socorros – básico<input type="checkbox"><br>
+3. Aprender a usar uma bússola ou GPS (urbano ou de campo) e demonstrar sua habilidade encontrando endereços em uma zona urbana.<input type="checkbox"><br>
 </p>
+
 <h2>IX. ESTILO DE VIDA</h2>
 <p>
-1. Completar uma especialidade na área de Artes e habilidades manuais.<br>
+1. Completar uma especialidade, não realizada anteriormente, em Artes e habilidades manuais.<input type="checkbox"><br>
 </p>
+
+<h2>CLASSE AVANÇADA – PESQUISADOR DE CAMPO E BOSQUE</h2>
+<p>
+1. Conhecer e saber usar de forma adequada a bandeira dos Desbravadores e o bandeirim de Unidade.<input type="checkbox"><br>
+2. Ler a história de J. N. Andrews ou de um pioneiro do seu país e discutir a importância do trabalho missionário e por que Cristo ordenou a grande comissão (Mateus 28:18-20).<input type="checkbox"><br>
+3. Convidar uma pessoa para assistir um dos seguintes programas:<input type="checkbox"><br>
+a) Clube de Desbravadores<input type="checkbox"><br>
+b) Classe Bíblica<input type="checkbox"><br>
+c) Pequeno Grupo<input type="checkbox"><br>
+4. Fazer uma das seguintes especialidades:<input type="checkbox"><br>
+a) Asseio e cortesia cristã<input type="checkbox"><br>
+b) Vida familiar<input type="checkbox"><br>
+5. Participar de uma caminhada de 10 km e fazer uma lista dos equipamentos necessários, incluindo roupa e calçado que devem ser usados.<input type="checkbox"><br>
+6. Participar na organização de um dos eventos especiais do Clube:<input type="checkbox"><br>
+a) Investidura<input type="checkbox"><br>
+b) Admissão em lenço<input type="checkbox"><br>
+c) Dia Mundial do Desbravador<input type="checkbox"><br>
+7. Identificar seis pegadas de animais ou aves. Fazer um modelo em gesso, massa de modelar ou biscuit de três dessas pegadas.<input type="checkbox"><br>
+8. Aprender a fazer as quatro amarras básicas e construir um móvel de acampamento.<input type="checkbox"><br>
+9. Planejar um cardápio vegetariano para sua Unidade para um acampamento de três dias e apresentá-lo ao seu instrutor.<input type="checkbox"><br>
+10. Enviar e receber uma mensagem através de uma das formas de comunicação abaixo:<input type="checkbox"><br>
+a) Alfabeto com semáforos<input type="checkbox"><br>
+b) Código Morse com lanterna<input type="checkbox"><br>
+c) Alfabeto Libras (língua de sinais)<input type="checkbox"><br>
+d) Alfabeto Braille<input type="checkbox"><br>
+11. Completar uma especialidade, não realizada anteriormente, em uma das áreas abaixo:<input type="checkbox"><br>
+a) Habilidades domésticas<input type="checkbox"><br>
+b) Ciência e saúde<input type="checkbox"><br>
+c) Atividades missionárias<input type="checkbox"><br>
+d) Atividades agrícolas<input type="checkbox"><br>
+</p>
+
 </div>
 </body>
 </html>
