--- a/Desbravadores-site/public/sobre.html
+++ b/Desbravadores-site/public/sobre.html
@@ -54,8 +54,10 @@
                 <p>Já participei do clube Tamoios como já foi citado anteriormente, entrei nesse clube em 2023, com 16 anos, e fiquei até o final de 2024.
                     E atualmente estou participando do clube Centauro
                 </p>
+                <div class="clubes-img">
                     <img src="assets/imgs/Tamoios.jpg" alt="Imagem clube Tamoios">
-                    <img src="" alt="">
+                    <img src="assets/imgs/Centauro.png" alt="Imagem cube Centauro">
+                </div>
             </div>
             <div class="footer">
                 <div class="conteiner">
