--- a/Desbravadores-site/public/classes/companheiro.html
+++ b/Desbravadores-site/public/classes/companheiro.html
@@ -30,16 +30,16 @@
         I. GERAIS
     </h2>
     <p>
-1. Ter, no mínimo, 10 anos de idade.<br>
+1. Ter, no mínimo, 11 anos de idade.<br>
 
 2. Ser membro ativo do Clube de Desbravadores.<br>
 
-3. Memorizar e explicar o Voto e a Lei do Desbravador.<br>
+3. Ilustrar de forma criativa o significado do Voto do Desbravador.<br>
 
-4. Ler o livro do Curso de Leitura do ano.<br>
+4. Ler o livro do Curso de Leitura do ano e escrever um parágrafo sobre o que mais lhe chamou atenção ou considerou importante.<br>
 
 
-5. Ler o livro Vaso de Barro.<br>
+5. Ler o livro Um simples lanche.<br>
 
 6. Participar ativamente da Classe Bíblica do seu Clube.<br>
 </p>
@@ -47,23 +47,30 @@
 <h2>II. DESCOBERTA ESPIRITUAL</h2>
 <p>
 1. Memorizar e demonstrar o seu conhecimento:<br>
-a) Criação: O que Deus criou em cada dia da Criação.<br>
-b) 10 Pragas: Quais as pragas que caíram sobre o Egito.<br>
-c) 12 Tribos: O nome de cada uma das 12 tribos de Israel.<br>
-d) 39 livros do Antigo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
+a) 10 Mandamentos: A Lei de Deus dada a Moisés.<br>
+b) 27 livros do Novo Testamento e demonstrar habilidade para encontrar qualquer um deles.<br>
 
 2. Ler e explicar os versos abaixo:<br>
-a) João 3:16<br>
-b) Efésios 6:1-3<br>
-c) II Timóteo 3:16<br>
-d) Salmo 1<br>
+a) Isaías 41:9-10<br>
+b) Hebreus 13:5<br>
+c) Provérbios 22:6<br>
+d) I João 1:9<br>
+e) Salmo 8<br>
+
 
 3. Leitura bíblica:<br>
-Gn 1, Gn 2, Gn 3, Gn 4:1-16, Gn 6:11-22, Gn 7, Gn 8, Gn 9:1-19, Gn 11:1-9, Gn 12:1-10, Gn 13, Gn 14:18-24, <br>
-Gn 15, Gn 17:1-8; 15-22, Gn 18:1-15, Gn 18:16-33, Gn 19:1-29, Gn 21:1-21, Gn 22:1-19, Gn 23, Gn 24:1-46, 48, <br>
-Gn 24:52-67, Gn 27, Gn 28, Gn 29, Gn 30:25-31; 31:2-3, 17-18, Gn 32, Gn 33, Gn 37, Gn 39, Gn 40, Gn 41, Gn 42, <br>
-Gn 43, Gn 44, Gn 45, Gn 47, Gn 50, Êx 1, Êx 2, Êx 3, Êx 4:1-17; 27-31, Êx 5, Êx 7, Êx 8, Êx 9, Êx 10, 11, Êx 12, <br>
-Êx 13:17-22; 14, Êx 15:22-27; 16, Êx 17, Êx 18, Êx 19, Êx 20, Êx 24, Êx 32, Êx 33, Êx 34:1-14; 29-35, Êx 35:4-29 e 40. <br>
+Lv 11, Nm 9:15-23, 11, 12, 13, 14:1-38, 16, 17, 20:1-13; 22-29,  <br>
+21:4-9, 22, 23; 24:1-10, Dt 1:1-17; 4:1-8, 32:1-43, 33, 34, Js 1, 2 <br>
+3, 4, 5:10; 6, 7, 9, 24:1-15; 29, Jz 6, 7, 13:1-18; 14, 15, 16, Rt 1, 2,  <br>
+3, 4, 1 Sm 1, 2, 3, 4, 5, 6, 8, 9, 10, 11:12-15, 12, 13, 15, 16, 17,  <br>
+18:1-19, 20, 21:1-7; 22, 24, 25, 26, 31, 2 Sm 1, 5, 6, 7, 9, 11; 12:1-25, 15, 18 <br>
+</p>
+<p>
+4. Em consulta com o seu conselheiro, escolher um dos seguintes temas:<br>
+a) Uma parábola de Jesus<br>
+b) Um milagre de Jesus<br>
+c) O Sermão da Montanha<br>
+d) Um sermão sobre a Segunda Vinda de Cristo<br>
 </p>
 <h2>III. SERVINDO A OUTROS</h2>
 <p>
